--- a/syncthing/config.json
+++ b/syncthing/config.json
@@ -10,7 +10,7 @@
     "options": {},
     "schema": {},
     "ports": {"8384/tcp": 8384, "22000/tcp": 22000, "21027/udp": 21027},
-    "map": ["share:rw", "config:rw", "backup:rw", "addons:rw"],
+    "map": ["share:rw", "config:rw", "backup:rw", "addons:rw", "media:rw"],
     "webui": "http://[HOST]:[PORT:8384]",
     "arch": ["armv7", "armhf", "amd64", "aarch64", "i386"]
 }
