Update Dockerfile. changes to fix

--- a/nut/Dockerfile
+++ b/nut/Dockerfile
@@ -5,18 +5,21 @@ FROM ${BUILD_FROM}
 ############################### Imported for modbus ################################
 
 # Install build deps
-RUN apk add --no-cache \
-      build-base autoconf automake libtool git libusb-dev \
-      pkgconfig libusb
+RUN apt-get update && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+      build-essential autoconf automake libtool git pkg-config \
+      libusb-1.0-0 libusb-1.0-0-dev ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
 
-# Build libmodbus with USB-RTU backend (rtu_usb branch)
+
+# libmodbus with USB-RTU backend
 WORKDIR /opt/build
 RUN git clone -b rtu_usb https://github.com/networkupstools/libmodbus.git \
  && cd libmodbus && ./autogen.sh \
  && ./configure --with-libusb --enable-static --disable-shared --prefix=/usr/local \
- && make -j"$(nproc)" && make install
+ && make -j"$(nproc)" && make install && ldconfig
 
-# Build NUT and produce just the apc_modbus driver linked to that libmodbus
+# NUT (apc_modbus only), linked to that libmodbus
 WORKDIR /opt/build
 RUN git clone https://github.com/networkupstools/nut.git \
  && cd nut && ./autogen.sh \
@@ -27,7 +30,6 @@ RUN git clone https://github.com/networkupstools/nut.git \
       --with-modbus-libs="-L/usr/local/lib -lmodbus" \
  && make -j"$(nproc)" \
  && install -m0755 drivers/apc_modbus /usr/sbin/apc_modbus
-
 # Copy in the stock add-on rootfs (if you copied it) so s6/run scripts still work.
 # If your add-on uses run.sh/CONFD templates, ensure they are present.
 # Example: COPY rootfs/ /
