--- a/nut/rootfs/etc/nut/ups.conf
+++ b/nut/rootfs/etc/nut/ups.conf
@@ -118,6 +118,7 @@
 # To find out if your driver supports any extra settings, start it with
 # the -h option and/or read the driver's documentation.
 
+export NUT_CONFPATH=/etc/nut
 
 [apc]
   driver = apc_modbus
